HelloUltraviolet/Fixtures/RejectedSource/Expressions/OperatorStaticTypes/Source/Main.uv
//! Rejected operator specimen for operator static type predicates.

public procedure operatorStaticTypesReference() -> i32 {
    return true + 1
}
